Game with bugs and too much polling

--- a/P1/Game/static/css/game.css
+++ b/P1/Game/static/css/game.css
@@ -17,10 +17,10 @@
 }
 
 .game-header .response {
-    position:fixed;
+    float:center;
     text-align: center;
-    width: inherit;
-    height: 100%;
+    width: 100%;
+    height: 1em;
 }
 
 .game-header #time-remaining {
